--- a/home/Explore/Catgry/css/template.css
+++ b/home/Explore/Catgry/css/template.css
@@ -15,16 +15,78 @@ img {vertical-align: middle;}
 	  color: #219c2c;
 	  text-align: center;
 }
+
+/*Place name and fav icon <3 */
 .placename{
   width: 100%;
-  height:50px;
-  text-align: center;
-     color: white;
-   text-shadow: 2px 2px 4px #000000;
+  height:60px;
+  color: white;
+  text-shadow: 2px 2px 4px #000000;
   background-color: #219c2c;
-   background: linear-gradient(to top, #2acf38 0%, #219c2c  100%)
+  background: linear-gradient(to top, #2acf38 0%, #219c2c  100%);
+  position: relative;
  
 }
+
+.favnm{
+
+  position: absolute;
+  right: 50px;
+  bottom: 2px;
+
+
+}
+
+.h1name{
+  position: absolute;
+  left:40%;
+  font-size: 40px;
+  top: 5px;
+
+}
+
+.fav-icon{
+  position: absolute;
+  right:6px;
+  top: 15px;
+}
+
+/***************fav icon****/
+
+.this{
+  display: none;
+}
+
+.star-widget input{
+  display: none;
+}
+
+
+.star-widget label{
+  font-size: 30px;
+  color:#444;
+  content: '\f005';
+  font-family: fontAwesome;
+ 
+  transition: all 0.2s ease;
+
+}
+
+input:not(:checked) ~ label:hover,
+input:not(:checked) ~ label:hover ~ label{
+  color: #F1184C;
+}
+
+input:checked ~ label{
+  color: #fd4;
+  
+}
+input#rate-1:checked ~label{
+  color: #F1184C;
+  text-shadow: 0 0 5px #952;
+}
+
+
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
@@ -153,22 +215,23 @@ img {vertical-align: middle;}
 
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
+  -webkit-animation-duration: none;
   animation-name: fade;
-  animation-duration: 1.5s;
+  animation-duration: none;
 }
+
 .pic{
   width:100%;
   height: 500px;
 }
 
 @-webkit-keyframes fade {
-  from {opacity: .4} 
+  from {opacity: 0} 
   to {opacity: 1}
 }
 
 @keyframes fade {
-  from {opacity: .4} 
+  from {opacity: 0} 
   to {opacity: 1}
 }
 
@@ -308,4 +371,17 @@ table{
   margin-left: 5%;
    box-shadow: 3px 3px 3px #000000;
 
+}
+
+/**form**/
+
+#rate-5:checked ~ form header:before{
+  content: "I just hate it";
+}
+
+.post1{
+  background: yellow;
+  left:10px;
+  margin: 0px;
+  padding: 0px;
 }
