--- a/home/Explore 2/explore.css
+++ b/home/Explore 2/explore.css
@@ -35,5 +35,8 @@ body
 .container .box .imgBox img 
 {
     max-width: 100%;
+    transition: transform 2s;
 }
+
+.container .box:hover .imgBox img 
 
