--- a/home/index/agent/style.css
+++ b/home/index/agent/style.css
@@ -36,7 +36,7 @@ body {
       background: #ee6002;
   }
   .createTopic{
-    background: #ee6002;
+    background: #eb8b0e;
     color: white;
   }
   
@@ -47,6 +47,7 @@ body {
     font-size: 20px;
     font-weight: 500;
     color: #fca33d;
+    z-index: 5;
   }
 
   .footer {
