--- a/home/index/agent/style.css
+++ b/home/index/agent/style.css
@@ -43,8 +43,8 @@ body {
   .uname {
     position: fixed;
     bottom: 55px;
-    left: 15px;
-    font-size: 20px;
+    left: 0;
+    font-size: 15px;
     font-weight: 500;
     color: #fca33d;
   }
