--- a/home/Explore/Catgry/css/nav.css
+++ b/home/Explore/Catgry/css/nav.css
@@ -61,9 +61,7 @@ a.active,a:hover{
     display:none;
 }
 
-#check{
-    display: none;
-}
+
 /* phone view */
 @media (max-width:952px){
     label.logo{
@@ -118,12 +116,12 @@ a.active,a:hover{
           cursor: pointer;
         }
         */
-        .dropdown {
+        .dropdown1 {
             position: relative;
             display: inline-block;
           }
           
-          .dropdown-content {
+          .dropdown1-content {
             display: none;
             position: absolute;
             background-color: #2acf38;
@@ -133,7 +131,7 @@ a.active,a:hover{
             font-family: Arial, Helvetica, sans-serif
           }
           
-          .dropdown-content a {
+          .dropdown1-content a {
             color: rgb(255, 255, 255);
             padding: 12px 16px;
             text-decoration: none;
@@ -141,9 +139,9 @@ a.active,a:hover{
             text-align: center;
           }
           
-          .dropdown-content a:hover {background-color: #219c2c}
+          .dropdown1-content a:hover {background-color: #219c2c}
           
-          .dropdown:hover .dropdown-content {
+          .dropdown1:hover .dropdown1-content {
             display: block;
           }
   
@@ -168,7 +166,7 @@ a.active,a:hover{
           
   
          /* 
-          .dropdown:hover .dropbtn {
+          .dropdown1:hover .dropbtn {
             background-color: #3e8e41;
           }
           */
