--- a/home/Explore/Catgry/css/nav.css
+++ b/home/Explore/Catgry/css/nav.css
@@ -3,7 +3,7 @@
     margin: 0;
     text-decoration: none;
     list-style: none;
-   /* box-sizing: border-box;*/
+    box-sizing: border-box;
 }
 
 body{
@@ -61,7 +61,9 @@ a.active,a:hover{
     display:none;
 }
 
-
+#check{
+    display: none;
+}
 /* phone view */
 @media (max-width:952px){
     label.logo{
@@ -116,12 +118,12 @@ a.active,a:hover{
           cursor: pointer;
         }
         */
-        .dropdown1 {
+        .dropdown {
             position: relative;
             display: inline-block;
           }
           
-          .dropdown1-content {
+          .dropdown-content {
             display: none;
             position: absolute;
             background-color: #2acf38;
@@ -131,7 +133,7 @@ a.active,a:hover{
             font-family: Arial, Helvetica, sans-serif
           }
           
-          .dropdown1-content a {
+          .dropdown-content a {
             color: rgb(255, 255, 255);
             padding: 12px 16px;
             text-decoration: none;
@@ -139,9 +141,9 @@ a.active,a:hover{
             text-align: center;
           }
           
-          .dropdown1-content a:hover {background-color: #219c2c}
+          .dropdown-content a:hover {background-color: #219c2c}
           
-          .dropdown1:hover .dropdown1-content {
+          .dropdown:hover .dropdown-content {
             display: block;
           }
   
@@ -166,7 +168,7 @@ a.active,a:hover{
           
   
          /* 
-          .dropdown1:hover .dropbtn {
+          .dropdown:hover .dropbtn {
             background-color: #3e8e41;
           }
           */
